--- a/AttenceProject/Web.config
+++ b/AttenceProject/Web.config
@@ -61,4 +61,20 @@
     <add name="connStr" connectionString="server=.;uid=sa;pwd=1234;database=Attence"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
+<!--Untiy配置项-->
+  <unity>
+    <containers> 
+      <container name="Service"> 
+        <types> 
+          <type type="TestUnity.ITest,TestUnity" mapTo="TestUnity.Test,TestUnity"/>
+      </types>
+    </container>
+    <container name="Repository">
+    <types>
+      <type type="TestUnity.IRepo,TestUnity" mapTo="TestUnity.Repo,TestUnity"/>
+      </types>
+    </container>
+  </containers>
+  </unity>
+<!--结束untiy-->
 </configuration>
