--- a/AttenceProject/AttenceProject.csproj
+++ b/AttenceProject/AttenceProject.csproj
@@ -5646,11 +5646,17 @@
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\SysAccountsController.cs" />
     <Compile Include="Controllers\SysAlternativesController.cs" />
+    <Compile Include="Controllers\SysApplySetsController.cs" />
     <Compile Include="Controllers\SysDeptsController.cs" />
     <Compile Include="Controllers\SysMenusController.cs" />
+    <Compile Include="Controllers\SysOverTimesController.cs" />
     <Compile Include="Controllers\SysUsersRolesController.cs" />
     <Compile Include="Controllers\SysWorkOffsController.cs" />
+    <Compile Include="Models\ModelContexts\SysApplySetContext.cs" />
+    <Compile Include="Models\ModelContexts\SysOverTimeContext.cs" />
     <Compile Include="Models\SysAccount.cs" />
+    <Compile Include="Models\SysApplySet.cs" />
+    <Compile Include="Models\SysOverTime.cs" />
     <Compile Include="Models\SysAlternative.cs" />
     <Compile Include="Models\ModelContexts\SysAccountContext.cs" />
     <Compile Include="Models\ModelContexts\SysWorkOffContext.cs" />
@@ -5702,6 +5708,12 @@
     <Content Include="Views\SysWorkOffs\Edit.cshtml" />
     <Content Include="Views\SysWorkOffs\Index.cshtml" />
     <Content Include="Views\SysWorkOffs\StartWorkOff.cshtml" />
+    <Content Include="Views\SysOverTimes\Create.cshtml" />
+    <Content Include="Views\SysOverTimes\Delete.cshtml" />
+    <Content Include="Views\SysOverTimes\Details.cshtml" />
+    <Content Include="Views\SysOverTimes\Edit.cshtml" />
+    <Content Include="Views\SysOverTimes\Index.cshtml" />
+    <Content Include="Views\SysApplySets\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
