--- a/AttenceProject/AttenceProject.csproj
+++ b/AttenceProject/AttenceProject.csproj
@@ -5735,6 +5735,7 @@
     <Content Include="Views\SysWorkOffs\Index.cshtml" />
     <Content Include="Views\SysWorkOffs\List.cshtml" />
     <Content Include="Views\SysOverTimes\ApproveCopy.cshtml" />
+    <Content Include="Views\SysDepts\DeptCount.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
