--- a/AttenceProject/AttenceProject.csproj
+++ b/AttenceProject/AttenceProject.csproj
@@ -47,6 +47,10 @@
       <HintPath>..\packages\Autofac.4.7.1\lib\net45\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Autofac.Integration.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.Mvc5.4.0.2\lib\net45\Autofac.Integration.Mvc.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="CommonServiceLocator, Version=2.0.3.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
       <HintPath>..\packages\Unity.5.8.0\lib\net45\CommonServiceLocator.dll</HintPath>
       <Private>True</Private>
@@ -5630,6 +5634,7 @@
     <Content Include="zTree_v3\README.md" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\AutoFacConfig.cs" />
     <Compile Include="App_Start\CookieHelper.cs" />
     <Compile Include="App_Start\JsonTool.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
@@ -5673,9 +5678,15 @@
     <Compile Include="Models\ViewModel\View_GeneralTree.cs" />
     <Compile Include="Models\ViewModel\View_SysUserInDept.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Face\ISysOverTime.cs" />
+    <Compile Include="Services\Face\ISysDept.cs" />
     <Compile Include="Services\Face\ILogin.cs" />
+    <Compile Include="Services\Face\ISysApplySet.cs" />
     <Compile Include="Services\Face\ISysAlternative.cs" />
+    <Compile Include="Services\Impl\SysOverTimeImpl.cs" />
+    <Compile Include="Services\Impl\SysDeptImpl.cs" />
     <Compile Include="Services\Impl\LoginImpl.cs" />
+    <Compile Include="Services\Impl\SysApplySetImpl.cs" />
     <Compile Include="Services\Impl\SysAlternativeImpl.cs" />
   </ItemGroup>
   <ItemGroup>
