--- a/AttenceProject/Web.config
+++ b/AttenceProject/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -34,7 +34,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.7.1.0" newVersion="4.7.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -58,8 +62,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="connStr" connectionString="server=.;uid=sa;pwd=1234;database=Attence"
-      providerName="System.Data.SqlClient" />
+    <add name="connStr" connectionString="server=.;uid=sa;pwd=1234;database=Attence" providerName="System.Data.SqlClient" />
   </connectionStrings>
 <!--Untiy配置项-->
  
